Se realizan cambios para el proyecto principal

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
     <packaging>pom</packaging>
     <modules>
         <module>producto-service</module>
+        <module>order-service</module>
+        <module>inventario-service</module>
+        <module>notification-service</module>
+        <module>api-gateway</module>
+
     </modules>
 
     <properties>
