--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.msvc.proyecto02</groupId>
-		<artifactId>microservicios-spring-boot</artifactId>
+		<groupId>com.microservicios</groupId>
+		<artifactId>microservicios-spring</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>com.servicio.notification</groupId>
