--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.msvc.proyecto02</groupId>
-		<artifactId>microservicios-spring-boot</artifactId>
+		<groupId>com.microservicios</groupId>
+		<artifactId>microservicios-spring</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>com.msvc.order</groupId>
@@ -13,7 +13,7 @@
 	<name>order-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
