--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,10 +24,10 @@ spring.cloud.gateway.routes[3].id=discovery-sever-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
-#punto de entrada para los clientes
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/spring-boot-microservices-realm
+##punto de entrada para los clientes
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/spring-boot-microservices-realm
 
-spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
-
-management.endpoints.web.exposure.include=prometheus
+#spring.zipkin.base-url=http://localhost:9411
+#spring.sleuth.sampler.probability=1.0
+#
+#management.endpoints.web.exposure.include=prometheus
