--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8089
+server.port=${PORT:${SERVER_PORT:0}}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/order_service
@@ -29,11 +29,11 @@ resilience4j.timelimiter.instances.inventario.timeout-duration=3s
 resilience4j.retry.instances.inventario.max-attempts=3
 resilience4j.retry.instances.inventario.wait-duration=5s
 
-spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+#spring.zipkin.base-url=http://localhost:9411
+#spcring.sleuth.sampler.probability=1.0
 
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.template.default-topic=notificationTopic
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.properties.spring.json.type.mapping=event:com.msvc.order.event.OrderPlacedEvent
+#spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.template.default-topic=notificationTopic
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.properties.spring.json.type.mapping=event:com.msvc.order.event.OrderPlacedEvent
