--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -29,11 +29,11 @@ resilience4j.timelimiter.instances.inventario.timeout-duration=3s
 resilience4j.retry.instances.inventario.max-attempts=3
 resilience4j.retry.instances.inventario.wait-duration=5s
 
-#spring.zipkin.base-url=http://localhost:9411
-#spcring.sleuth.sampler.probability=1.0
+spring.zipkin.base-url=http://localhost:9411
+spcring.sleuth.sampler.probability=1.0
 
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.template.default-topic=notificationTopic
-#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-#spring.kafka.producer.properties.spring.json.type.mapping=event:com.msvc.order.event.OrderPlacedEvent
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.msvc.order.event.OrderPlacedEvent
