--- a/producto-service/src/main/resources/application.properties
+++ b/producto-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=producto-service
 
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
-#spring.zipkin.base-url=http://localhost:9411
-#spring.sleuth.sampler.probability=1.0
-#
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
+
 server.port=8087
 #
 #management.endpoints.web.exposure.include=prometheus
